# lotus-core

./: .clang-format  .gitignore  AGENTS.md  ANTIGRAVITY.md  ARCHITECTURE.md  CMakeLists.txt  COMPARISON_REPORT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  TODO.md  app.js  build_wasm.sh  dev.sh  index.html  jules_doxygen.patch  lotus_core.js  lotus_core.wasm  lotus_engine.js  lotus_engine.wasm  lotus_tests  modern_initials.patch  non_std_initials.patch  rename_project.py  tracing.patch  vni_fix.patch
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy_pages.yml
.jules/: bolt.md
docs/: AGENTS.md  ARCHITECTURE.md  COMPARISON_REPORT.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  ROADMAP.md
include/lotus_core/: capi.h  charset.h  common.h  composition_buffer.h  constants.h  context_tracker.h  engine.h  input_dispatcher.h  linguistics.h  log.h  parser.h  parser_components.h  phonology_data.h  shortcut_manager.h  smart_typing.h  types.h  unicode.h  validator.h
include/lotus_engine/: capi.h  common.h  constants.h  engine.h  linguistics.h  log.h  parser.h  parser_components.h  shortcut_manager.h  smart_typing.h  types.h  unicode.h  validator.h
python/: README.md  demo.py  lotus_core.py  lotus_engine.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: basic_typing.rs
rust/src/: lib.rs  sys.rs
src/: capi.cpp  engine.cpp  linguistics.cpp  log.cpp  parser.cpp  syllable.cpp  validator.cpp
src/api/: capi.cpp  capi_wasm_wrapper.cpp
src/core/: composition_buffer.cpp  context_tracker.cpp  engine.cpp  input_dispatcher.cpp  log.cpp  syllable.cpp  validator.cpp
src/core/parser/: coda_parser.cpp  glide_parser.cpp  initial_parser.cpp  nucleus_parser.cpp  parser.cpp
src/features/: charset.cpp  shortcut_manager.cpp  smart_typing.cpp
src/linguistics/: linguistics.cpp
tests/: bench_engine.cpp  diag_bs.cpp  diag_vni.cpp  test_capi.cpp  test_capi_integration.cpp  test_char_state.cpp  test_edge_cases.cpp  test_engine.cpp  test_features.cpp  test_features_stub.cpp  test_main.cpp  test_parser.cpp  test_phonology.cpp  test_syllable.cpp  test_tone_style.cpp  test_validator.cpp  test_vni.cpp  tui_demo.cpp
tools/: jules_helper.user.js  relay_server.py
web/: app.js  index.html  lotus_core.js  lotus_engine.js  lotus_engine.wasm  style.css
